IL-67 feat: fix styles PostCropping component

--- a/src/layouts/local/ui/CreatePost/PostCropping/ui/PostCropping.module.scss
+++ b/src/layouts/local/ui/CreatePost/PostCropping/ui/PostCropping.module.scss
@@ -27,6 +27,11 @@
 
     width: 100%;
     height: 38px;
+    padding: 10px;
+
+    & > *:first-child {
+      margin-right: 24px;
+    }
 
     & > *:last-child {
       display: flex;
